<resources>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="app_name">Car Care</string>
    <string name="takeccare">Take care of your car</string>
    <string name="phoneOREmail">Phone or Email</string>
    <string name="secretNum">Secret Number</string>
    <string name="enter">Login</string>
    <string name="name">Name</string>
    <string name="email_reg">Email</string>
    <string name="mobile_reg">Phone number</string>
    <string name="secretNum_re">Re-enter secret number</string>
    <string name="register"> Register</string>
    <string name="you_have_not_account">You don\'t have account ?   Register Now</string>
    <string name="services">Services</string>
    <string name="there_no_data">There no Data</string>
    <string name="reservations">Reservations</string>
    <string name="book">Book</string>
    <string name="choose_date_of_booking">Choose Date OF Booking</string>
    <string name="choose_time_of_booking">Choose Time Of Booking</string>
    <string name="total">Total</string>
    <string name="date_selected_is">Date Selected Is</string>
    <string name="time">Time :</string>
    <string name="wrong_num">Wrong Number</string>

    <string name="err_email">Email address please</string>
    <string name="err_name">Enter name please</string>
    <string name="err_password">The password should contain at least 6 characters</string>
    <string name="err_password_confirmation">Please re-enter the password</string>
    <string name="le">LE</string>
    <string name="widget_text">Widget Text</string>
    <string name="photo">photo</string>
    <string name="button_for_reservation">button for reservation</string>
    <string name="back_to_previous">Back to previous</string>
    <string name="name_of_service">name of service</string>
    <string name="price_of_service">price of service</string>
    <string name="currency">currency</string>
    <string name="email_field">Email Field</string>
    <string name="password_field">Password Field</string>
    <string name="login_button">Login Button</string>
    <string name="go_to_registration_activity">Go to Registration Activity</string>
    <string name="name_field">name Field</string>
    <string name="confirm_password_field">Confirm Password Field</string>
    <string name="registration_button">Registration button</string>
    <string name="press_on_this_image_to_select_date">press on this image to select date</string>
    <string name="press_on_this_button_to_select_time">press on this button to select time</string>
    <string name="selected_time">Selected Time</string>
    <string name="enter_mobile_number_field">enter mobile number field</string>
    <string name="logo_image">logo image</string>
    <string name="enter_name">Please Enter Phone Number</string>
    <string name="enter_date">Please Enter date of booking</string>
    <string name="service_name">Service Name :</string>
    <string name="service_price">Service Price :</string>
    <string name="date_of_reservstion">Date Of Reservation :</string>
    <string name="time_of_reservation">Time Choosed :</string>
    <string name="select_time">Select Time</string>
    <string name="date_picker">date picker</string>
    <string name="service_image">Service Image</string>
    <string name="phone">Phone</string>
    <string name="price">price</string>
    <string name="zero">: 0</string>
    <string name="separate">:</string>
</resources>
