<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/youregone"
        android:text="@string/app_name"
        android:textColor="@color/logo"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="60dp"
        android:text="@string/takeccare"
        android:textColor="@color/logo"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:singleLine="true"
            android:ems="10"
            android:hint="@string/phoneOREmail"
            android:textColorHint="@color/logo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/secretNum"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColorHint="@color/logo" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/border_button_email"
            android:text="@string/enter"
            android:contentDescription="@string/login_button"
            android:textColor="@color/logo" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/you_have_not_account"
        android:textColor="@color/logo"
        android:contentDescription="@string/go_to_registration_activity"
        android:onClick="regNow"/>


</FrameLayout>