<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Book_Car_Activity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitesmoke"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carnaem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/name_of_service"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cardesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/fafagray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/choose_date_of_booking"
                android:contentDescription="@string/choose_date_of_booking"
                android:textColor="@color/cardview_dark_background" />

            <ImageView
                android:id="@+id/nxtBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:onClick="Date_Care"
                android:src="@drawable/ic_date_orange_24dp"
                android:text=""
                android:contentDescription="@string/press_on_this_image_to_select_date"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/datesele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/datechoosee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/date_selected_is"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/datechoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView222"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/choose_time_of_booking"
                android:textColor="@color/cardview_dark_background" />

            <ImageView
                android:id="@+id/nxtBtnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:onClick="Time_car"
                android:src="@drawable/ic_date_orange_24dp"
                android:text=""
                android:contentDescription="@string/press_on_this_button_to_select_time"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timesele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/timechoosee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/time"
                android:contentDescription="@string/selected_time"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/timechoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phoneid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/enter_mobile_number_field"
            android:inputType="textEmailAddress" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView224"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:text="@string/total"
                android:textColor="@color/cardview_dark_background" />

            <TextView
                android:id="@+id/totalM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/logo"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/payBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_button_email"
            android:onClick="BookCar"
            android:text="@string/book"
            android:textColor="@color/white"
            android:contentDescription="@string/button_for_reservation"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>