<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_img"
            android:layout_width="fill_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/service_image"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/name_of_service"
                android:text="" />

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_weight="1"                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:textColor="@color/colorPrimary"
                android:contentDescription="@string/price_of_service"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
